Update Zuul V3 default definitions

--- a/nodepool/_local_hypervisor_oci.yaml
+++ b/nodepool/_local_hypervisor_oci.yaml
@@ -7,7 +7,7 @@ labels:
 providers:
   - name: oci-provider-managesf
     driver: oci
-    hypervisor: managesf.sftests.com
+    hypervisor: managesf.zuul.thoth-station.ninja
     pools:
       - name: main
         max-servers: 10
