--- a/playbooks/base/post.yaml
+++ b/playbooks/base/post.yaml
@@ -14,6 +14,6 @@
         - import_role: name=emit-job-report
         - import_role: name=buildset-artifacts-location
       vars:
-        zuul_log_url: "https://sftests.com/logs"
+        zuul_log_url: "https://zuul.thoth-station.ninja/logs"
         zuul_logserver_root: /var/www/logs
 
