--- a/zuul.d/_pipelines.yaml
+++ b/zuul.d/_pipelines.yaml
@@ -107,8 +107,8 @@
       sqlreporter:
     failure:
       smtp:
-        from: "zuul@zuul.thoth-station.ninja"
-        to: "root@localhost"
+        from: "goern+sesheta@redhat.com"
+        to: "goern+sesheta@redhat.com"
         subject: '[Zuul] Job failed in post pipeline: {change.project}'
       sqlreporter:
 
@@ -122,13 +122,14 @@
       github.com:
         - event: push
           # ref: ^refs/tags/[0-9]+(\.[0-9]+)*$
-          ref: ^refs/tags/([0-9])\.([0-9])\.([0-9])(?:-([0-9a-zA-Z.-]+))?(?:\+([0-9a-zA-Z.-]+))?$
+          # ref: ^refs/tags/([0-9]+)\.([0-9]+)\.([0-9]+)(?:-([0-9a-zA-Z.-]+))?(?:\+([0-9a-zA-Z.-]+))?$
+          ref: ^refs/tags/[0-9a-zA-Z]+*$
     success:
       sqlreporter:
     failure:
       smtp:
-        from: "zuul@zuul.thoth-station.ninja"
-        to: "root@localhost"
+        from: "goern+sesheta@redhat.com"
+        to: "goern+sesheta@redhat.com"
         subject: '[Zuul] Job failed in release pipeline: {change.project}'
       sqlreporter:
 
@@ -145,8 +146,8 @@
       sqlreporter:
     failure:
       smtp:
-        from: "zuul@zuul.thoth-station.ninja"
-        to: "root@localhost"
+        from: "goern+sesheta@redhat.com"
+        to: "goern+sesheta@redhat.com"
         subject: '[Zuul] Job failed in periodic pipeline: {change.project}'
       sqlreporter:
 
