--- a/zuul.d/_pipelines.yaml
+++ b/zuul.d/_pipelines.yaml
@@ -49,7 +49,7 @@
           - permission: write
             type: approved
         # Require label
-        label: approved
+        label: zuul:approved
         status: "thoth-zuul-test\\[bot\\]:local/check:success"
         open: True
         current-patchset: True
@@ -73,7 +73,7 @@
         - event: pull_request
           action: labeled
           label:
-            - approved
+            - zuul:approved
     start:
       github.com:
         status: 'pending'
