putting the correct regexp in there again...
Signed-off-by: Christoph Görn <goern@redhat.com>

--- a/zuul.d/_pipelines.yaml
+++ b/zuul.d/_pipelines.yaml
@@ -121,7 +121,7 @@
     trigger:
       github.com:
         - event: push
-          ref: ^refs/tags/[0-9]+(\.[0-9]+)*(a|b|rc)[0-9]+$
+          ref: ^refs/tags/([0-9]+)\.([0-9]+)\.([0-9]+)(?!rc|alpha|beta)((?:-([0-9a-zA-Z.-]+))?(?:\+([0-9a-zA-Z.-]+)))?$
     success:
       sqlreporter:
     failure:
