--- a/zuul/openstack.yaml
+++ b/zuul/openstack.yaml
@@ -4,13 +4,13 @@
     source:
       git.openstack.org:
         untrusted-projects:
-          - openstack/cinder
-          - openstack/glance
-          - openstack/keystone
-          - openstack/neutron
-          - openstack/nova
-          - openstack/swift
-          - openstack/requirements
-          - openstack-dev/devstack
-          - openstack-infra/devstack-gate
+#          - openstack/cinder
+#          - openstack/glance
+#          - openstack/keystone
+#          - openstack/neutron
+#          - openstack/nova
+#          - openstack/swift
+#          - openstack/requirements
+#          - openstack-dev/devstack
+#          - openstack-infra/devstack-gate
           - openstack-infra/openstack-zuul-jobs
