--- a/zuul.d/kebechet-auto-gate.yaml
+++ b/zuul.d/kebechet-auto-gate.yaml
@@ -11,7 +11,7 @@
       github.com:
         label: 
           - bot
-        status: "thoth-zuul-test\\[bot\\]:local/check:success"
+        status: "thoth-zuul\\[bot\\]:local/check:success"
         open: True
         current-patchset: True
     trigger:
@@ -21,7 +21,7 @@
           comment: (?i)^\s*regate\s*$
         - event: pull_request
           action: status
-          status: "thoth-zuul-test\\[bot\\]:local/check:success"
+          status: "thoth-zuul\\[bot\\]:local/check:success"
         - event: pull_request
           action: labeled
           label:
