redid the imagestream
Signed-off-by: Christoph Görn <goern@redhat.com>

--- a/playbooks/thoth-openshift-base/prepare-namespace.yaml
+++ b/playbooks/thoth-openshift-base/prepare-namespace.yaml
@@ -19,12 +19,22 @@
         name: python-36-centos7
       spec:
         lookupPolicy:
-          local: true
+          local: 
         tags:
-        - name: latest
+        - annotations: null
           from:
             kind: DockerImage
             name: registry.centos.org/centos/python-36-centos7
           importPolicy: {}
+          name: latest
           referencePolicy:
             type: Source
+      status:
+        dockerImageRepository: docker-registry.default.svc:5000/thoth-test-core/python-36-centos7
+        tags:
+        - items:
+          - created: 2018-07-04T18:44:16Z
+            dockerImageReference: registry.centos.org/centos/python-36-centos7@sha256:d6aa25342703a6fc78230750dfbe840b5f9b04a28639e6665f9f8ff224b4ad47
+            generation: 1
+            image: sha256:d6aa25342703a6fc78230750dfbe840b5f9b04a28639e6665f9f8ff224b4ad47
+          tag: latest
