using v1 of api
Signed-off-by: Christoph Görn <goern@redhat.com>

--- a/playbooks/thoth-openshift-base/prepare-namespace.yaml
+++ b/playbooks/thoth-openshift-base/prepare-namespace.yaml
@@ -11,7 +11,7 @@
     state: present
     namespace: "{{ zuul_resources['namespace'].namespace }}"
     definition:
-      apiVersion: image.openshift.io/v1
+      apiVersion: v1
       kind: ImageStream
       metadata:
         name: python-36-centos7
