--- a/playbooks/thoth-openshift-base/prepare-namespace.yaml
+++ b/playbooks/thoth-openshift-base/prepare-namespace.yaml
@@ -17,7 +17,7 @@
         name: python-36-centos7
       spec:
         lookupPolicy:
-          local: 
+          local: true
         tags:
         - annotations: null
           from:
