using ImageStreamTags now and not waiting for our project name to appear
Signed-off-by: Christoph Görn <goern@redhat.com>

--- a/playbooks/thoth-openshift-base/record-imagestreams.yaml
+++ b/playbooks/thoth-openshift-base/record-imagestreams.yaml
@@ -1,19 +1,18 @@
 ---
-- name: get ImageStream
+- name: get ImageStreamTags
   command: oc get imagestreamtags -o "jsonpath={.items[*].metadata.name}"
   register: _is_name
   retries: 600
   delay: 1
-  until: "zuul.project.short_name in _is_name.stdout"
 
-- name: create ImageStream list
+- name: create ImageStreamTags list
   set_fact:
     is_data:
-      imagestreams:
+      imagestreamtags:
         - name: "{{ zuul.project.short_name }}"
           imagestream: "{{ _is_name.stdout }}"
 
-- name: store imagestream list in work_root
+- name: store ImageStreamTags list in work_root
   copy:
     content: "{{ is_data | to_yaml }}"
-    dest: "{{ zuul.executor.work_root }}/imagestreams.yaml"
+    dest: "{{ zuul.executor.work_root }}/imagestreamtags.yaml"
