--- a/playbooks/config/check.yaml
+++ b/playbooks/config/check.yaml
@@ -1,9 +1,6 @@
 ---
 - hosts: localhost
   tasks:
-    - import_role: name=emit-job-header
-    - import_role: name=log-inventory
-
     - name: Set speculative config path
       set_fact:
         config_root: "{{ zuul.executor.src_root }}/{{ zuul.project.canonical_name }}"
@@ -82,17 +79,20 @@
       command: git config -f gerrit/replication.config -l
       args:
         chdir: "{{ config_root }}"
+      when: '"gerrit" in arch.roles'
 
     # Use "env -" to remove zuul-executor environment that modifies python runtime (e.g. defines a 'zuul' python module)
     - name: Check gerrit commentlinks
       command: env - python -c "import yaml; 'commentlinks' in yaml.safe_load(open('gerrit/commentlinks.yaml'))"
       args:
         chdir: "{{ config_root }}"
+      when: '"gerrit" in arch.roles'
 
     - name: Check dashboards
       command: env - python2 /usr/libexec/software-factory/sf-update-dashboard --check --input dashboards/
       args:
         chdir: "{{ config_root }}"
+      when: '"gerrit" in arch.roles'
 
     - name: Check policy file
       command: env - python -c "import yaml; yaml.safe_load(open('policies/policy.yaml'))"
@@ -148,7 +148,7 @@
 
         - name: Validate zuul config syntax
           command: >
-            env - /opt/rh/rh-python35/root/bin/zuul-scheduler -c zuul.conf -t
+            env - /opt/rh/rh-python35/root/bin/zuul -c zuul.conf tenant-conf-check
           args:
             chdir: "{{ config_root }}/build"
 
