--- a/resources/_internal.yaml
+++ b/resources/_internal.yaml
@@ -11,6 +11,8 @@ resources:
     github.com:
       base-url: "https://github.com"
       type: github
+      github-app-name: thoth-zuul
+      github-label: approved
     local-git:
       base-url: "file:///var/lib/software-factory/git"
       type: git
