adding open.paas.redhat.com as an OpenShift provider
Signed-off-by: Christoph Görn <goern@redhat.com>

--- a/zuul.d/nodeset.yaml
+++ b/zuul.d/nodeset.yaml
@@ -1,5 +1,17 @@
 - nodeset:
     name: thoth-engint
     nodes:
-      - name: namespace
+      - name: project
         label: thoth-engint
+
+- nodeset:
+    name: openpaas-project
+    nodes:
+      - name: project
+        label: openshift-project
+
+- nodeset:
+    name: openpaas-fedora
+    nodes:
+      - name: pod
+        label: openshift-pod-fedora
