this should not be renamed
Signed-off-by: Christoph Görn <goern@redhat.com>

--- a/zuul.d/nodeset.yaml
+++ b/zuul.d/nodeset.yaml
@@ -1,7 +1,7 @@
 - nodeset:
     name: thoth-engint
     nodes:
-      - name: project
+      - name: namespace
         label: thoth-engint
 
 - nodeset:
