--- a/zuul/thoth-metrics.yaml
+++ b/zuul/thoth-metrics.yaml
@@ -1,7 +1,7 @@
 ---
 - tenant:
-    name: 'local'
+    name: "local"
     source:
       github.com:
         untrusted-projects:
-          - thoth-station/thoth-metrics
+          - "thoth-station/thoth-metrics"
