--- a/roles/log-classify/defaults/main.yaml
+++ b/roles/log-classify/defaults/main.yaml
@@ -27,6 +27,8 @@ logclassify_model_dir: "{{ logclassify_tmp_dir }}"
 
 # Process console-log
 logclassify_console: true
+# Process ara ansible.sqlite
+logclassify_ara_database: false
 
 # Include paths from baseline logs
 logclassify_logserver_dir: ""
