--- a/nodepool/thoth.yaml
+++ b/nodepool/thoth.yaml
@@ -18,9 +18,17 @@
           labels:
             - name: "thoth-coala"
               image: "thoth-coala:latest"
+              cpu: 1
+              memory: 1024
             - name: "thoth-pylint"
               image: "thoth-pylint:latest"
+              cpu: 1
+              memory: 1024
             - name: "thoth-pytest"
               image: "thoth-pytest:latest"
+              cpu: 1
+              memory: 1024
             - name: "thoth-ops"
               image: "thoth-ops:latest"
+              cpu: 1
+              memory: 1024
