Exclude unprotected branch for the config projects
Related-To: https://review.openstack.org/633314

--- a/zuul/_main.yaml
+++ b/zuul/_main.yaml
@@ -5,7 +5,8 @@
     source:
       github.com:
         config-projects:
-          - thoth-station/zuul-test-config
+          - thoth-station/zuul-test-config:
+              exclude-unprotected-branches: true
         untrusted-projects:
           - thoth-station/zuul-test-jobs
 
