--- a/playbooks/openshift/prepare-namespace.yaml
+++ b/playbooks/openshift/prepare-namespace.yaml
@@ -3,8 +3,8 @@
 - name: create staging-http DeploymentConfig
   openshift_raw:
     state: present
-    namespace: "{{ zuul_resources['project'].namespace }}"
-    context: "{{ zuul_resources['project'].context }}"
+    namespace: "{{ zuul.resources['project'].namespace }}"
+    context: "{{ zuul.resources['project'].context }}"
     definition:
       apiVersion: v1
       kind: DeploymentConfig
@@ -44,8 +44,8 @@
 - name: create staging-http Service spec
   openshift_raw:
     state: present
-    namespace: "{{ zuul_resources['project'].namespace }}"
-    context: "{{ zuul_resources['project'].context }}"
+    namespace: "{{ zuul.resources['project'].namespace }}"
+    context: "{{ zuul.resources['project'].context }}"
     definition:
       apiVersion: v1
       kind: Service
