--- a/zuul.d/_pipelines.yaml
+++ b/zuul.d/_pipelines.yaml
@@ -19,7 +19,7 @@
     start:
       github.com:
         status: 'pending'
-        status-url: "https://zuul.thoth-station.ninja/zuul/t/local/status.html"
+        status-url: "https://thoth-station.ninja/zuul/t/local/status.html"
         comment: false
     success:
       github.com:
@@ -78,7 +78,7 @@
     start:
       github.com:
         status: 'pending'
-        status-url: "https://zuul.thoth-station.ninja/zuul/t/local/status.html"
+        status-url: "https://thoth-station.ninja/zuul/t/local/status.html"
         comment: false
     success:
       github.com:
@@ -108,8 +108,8 @@
       sqlreporter:
     failure:
       smtp:
-        from: "zuul@zuul.thoth-station.ninja"
-        to: "goern+sesheta@redhat.com"
+        from: "zuul@thoth-station.ninja"
+        to: "root@localhost"
         subject: '[Zuul] Job failed in post pipeline: {change.project}'
       sqlreporter:
 
@@ -128,8 +128,8 @@
     failure:
       sqlreporter:
       smtp:
-        from: "zuul@zuul.thoth-station.ninja"
-        to: "goern+sesheta@redhat.com"
+        from: "zuul@thoth-station.ninja"
+        to: "root@localhost"
         subject: '[Zuul] Job failed in pre-release pipeline: {change.project}'
 
 - pipeline:
@@ -146,8 +146,8 @@
       sqlreporter:
     failure:
       smtp:
-        from: "zuul@zuul.thoth-station.ninja"
-        to: "goern+sesheta@redhat.com"
+        from: "zuul@thoth-station.ninja"
+        to: "root@localhost"
         subject: '[Zuul] Job failed in release pipeline: {change.project}'
       sqlreporter:
 
@@ -164,8 +164,8 @@
       sqlreporter:
     failure:
       smtp:
-        from: "zuul@zuul.thoth-station.ninja"
-        to: "goern+sesheta@redhat.com"
+        from: "zuul@thoth-station.ninja"
+        to: "root@localhost"
         subject: '[Zuul] Job failed in periodic pipeline: {change.project}'
       sqlreporter:
 
