--- a/playbooks/openshift/pre.yaml
+++ b/playbooks/openshift/pre.yaml
@@ -21,7 +21,7 @@
 
         - import_role: name=log-inventory
       vars:
-        zuul_log_url: "https://zuul.thoth-station.ninja/logs"
+        zuul_log_url: "https://thoth-station.ninja/logs"
 
     - name: Set oc_command fact
       set_fact:
